[gd_scene load_steps=3 format=3 uid="uid://cu0maqxrfidwd"]

[ext_resource type="Script" uid="uid://cwas45hvfwiw0" path="res://UpgradeComponents/fruit_magnet_1_component.gd" id="1_fntuq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_naiko"]

[node name="FruitMagnet1Component" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_fntuq")
metadata/_edit_vertical_guides_ = [-710.0]

[node name="ComponentShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_naiko")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
